--- a/pandemic-ui/package.json
+++ b/pandemic-ui/package.json
@@ -35,5 +35,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@types/react": "^19.0.1",
+    "@types/react-dom": "^19.0.2"
   }
 }
