--- a/pandemic-server/package.json
+++ b/pandemic-server/package.json
@@ -5,10 +5,10 @@
   "main": "dist/index.js",
   "scripts": {
     "start": "node dist/index.js",
-    "dev": "ts-node-dev --respawn src/index.ts",
+    "dev": "ts-node-dev --respawn src/js/index.ts",
     "build": "tsc",
     "test": "jasmine",
-    "lint": "eslint . --ext .ts"
+    "lint": "eslint \"./src/js/**/*.{js,jsx,ts,tsx}\""
   },
   "dependencies": {
     "express": "^4.18.2",
