--- a/pandemic-server/package.json
+++ b/pandemic-server/package.json
@@ -11,19 +11,21 @@
     "lint": "eslint \"./src/js/**/*.{js,jsx,ts,tsx}\""
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "@apollo/server": "^5.0.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "graphql": "^16.11.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
     "@types/cors": "^2.8.17",
-    "@types/node": "^20.10.0",
+    "@types/express": "^4.17.21",
     "@types/jasmine": "^5.1.2",
+    "@types/node": "^20.19.13",
     "@typescript-eslint/eslint-plugin": "^6.12.0",
     "@typescript-eslint/parser": "^6.12.0",
     "eslint": "^8.54.0",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.3.2"
+    "typescript": "^5.9.2"
   }
 }
