--- a/pandemic-ui/package.json
+++ b/pandemic-ui/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@tailwindcss/cli": "^4.1.13",
     "cra-template": "1.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -11,8 +12,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "npx @tailwindcss/cli -i ./src/css/index.css -o ./public/index.css --watch & react-scripts start",
+    "build": "npx @tailwindcss/cli -i ./src/css/index.css -o ./public/index.css && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
