--- a/pandemic-ui/package.json
+++ b/pandemic-ui/package.json
@@ -2,6 +2,7 @@
   "name": "pandemic-ui",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://lemartin19.github.io/pandemic/",
   "dependencies": {
     "@tailwindcss/cli": "^4.1.13",
     "cra-template": "1.2.0",
@@ -16,7 +17,9 @@
     "css": "npx @tailwindcss/cli -i ./src/css/index.css -o ./public/index.css --watch",
     "build": "npx @tailwindcss/cli -i ./src/css/index.css -o ./public/index.css && react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -45,6 +48,7 @@
     "@types/react-dom": "^19.0.2",
     "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.21",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.13"
   }
